--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.SetupActivity"></activity>
+        <activity android:name=".Activities.SetupActivity"
+            android:screenOrientation="portrait"></activity>
         <activity android:name=".Activities.RegisterActivity"
             android:screenOrientation="portrait"/>
         <activity
