--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.SetupActivity"
+        <activity android:name=".activities.SetupActivity"
             android:screenOrientation="portrait"></activity>
-        <activity android:name=".Activities.RegisterActivity"
+        <activity android:name=".activities.RegisterActivity"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".Activities.LoginActivity"
+            android:name=".activities.LoginActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".MainActivity"
