--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.NewPostActivity"></activity>
+        <activity android:name=".activities.NewPostActivity"></activity>
         <activity
             android:name=".activities.SetupActivity"
             android:screenOrientation="portrait" />
