--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
         </activity>
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:theme="@style/AppTheme.NoActionBar.crop" />
+            android:theme="@style/Base.Theme.AppCompat"/>
     </application>
 
 </manifest>
